--- a/script/config.json
+++ b/script/config.json
@@ -1,5 +1,5 @@
 {  
-  "DEVELOPER_MODE": true,  
+  "DEVELOPER_MODE": false,  
   "USE_LOCAL_STORAGE": true,
   "mobile": {
     "DEFAULT_VOICE": "Google Nederlands",
