--- a/script/config.json
+++ b/script/config.json
@@ -5,11 +5,12 @@
     "DEFAULT_VOICE": "Google Nederlands",
     "DEFAULT_SETTINGS": {
       "uiLang": "en",
+      "delay": "1000",
+      "speed": "1.0",
       "digitLength": "2",
       "count": "40",
       "repeat": "1",
-      "delay": "500",
-      "speed": "1.0",
+      "fullscreen": "1",
       "languageCode": "nl-NL",
       "voiceName": "Google Nederlands"
     }
@@ -17,11 +18,12 @@
   "desktop": {
     "DEFAULT_SETTINGS": {
       "uiLang": "en",
+      "delay": "1000",
+      "speed": "1.0",
       "digitLength": "2",
       "count": "40",
       "repeat": "1",
-      "delay": "500",
-      "speed": "1.0",
+      "fullscreen": "1",
       "languageCode": "nl-NL",
       "voiceName": "Google Nederlands"
     }
