--- a/assets/configs/config.json
+++ b/assets/configs/config.json
@@ -1,29 +1,20 @@
-{  
-  "DEVELOPER_MODE": false,  
+{
+  "DEVELOPER_MODE": false,
   "USE_LOCAL_STORAGE": true,
   "DEFAULT_VOICE": "Google Nederlands",
   "DEFAULT_SETTINGS": {
-    "mobile":{
+    "shared": {
       "uiLang": "en",
       "delay": "1000",
       "speed": "1.0",
       "digitLength": "2",
       "count": "40",
       "repeat": "1",
-      "fullscreen": "0",
+      "fullscreen": false,
       "languageCode": "nl-NL",
-      "voiceName": "Google Nederlands"  
+      "voiceName": "Google Nederlands"
     },
-    "desktop": {    
-      "uiLang": "en",
-      "delay": "1000",
-      "speed": "1.0",
-      "digitLength": "2",
-      "count": "40",
-      "repeat": "1",
-      "fullscreen": "0",
-      "languageCode": "nl-NL",
-      "voiceName": "Google Nederlands"    
-    }
+    "mobile": { "fullscreen": true },
+    "desktop": { "fullscreen": false }
   }
 }
