--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "liveServer.settings.port": 5501
+        "editor.formatOnSave": true,
+    "[json]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "liveServer.settings.port": 5501,
+    // "prettier.printWidth": 80,
+    // "prettier.printWidth": 120,
+    "prettier.printWidth": 1000
 }
